--- a/backend/package.json
+++ b/backend/package.json
@@ -14,17 +14,31 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "helmet": "^7.1.0",
-    "mysql2": "^3.6.5"
-  },
-  "devDependencies": {
+    "mysql2": "^3.6.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
+    "@sendgrid/mail": "^8.1.3",
+    "@aws-sdk/client-s3": "^3.577.0",
+    "@aws-sdk/s3-request-presigner": "^3.577.0",
+    "firebase-admin": "^12.1.0",
+    "@google-cloud/storage": "^7.11.0",
+    "tesseract.js": "^5.1.0",
+    "node-cron": "^3.0.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
-    "jest": "^29.7.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
+    "@types/node-cron": "^3.0.11",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.8",
+    "jest": "^29.7.0"
   },
   "keywords": [
     "scholarship",
